--- a/.github/workflows/build_LoopFollow.yml
+++ b/.github/workflows/build_LoopFollow.yml
@@ -34,4 +34,4 @@ jobs:
           FASTLANE_KEY_ID: ${{ secrets.FASTLANE_KEY_ID }}
           FASTLANE_KEY: ${{ secrets.FASTLANE_KEY }}
           TEAMID: ${{ secrets.TEAMID }}
-        run: bundle exec fastlane beta
+        run: bundle exec fastlane build_LoopFollow
